made artisan ide-helper work

--- a/composer.json
+++ b/composer.json
@@ -49,9 +49,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-                "barryvdh/laravel-ide-helper"
-            ]
+            "dont-discover": []
         }
     },
     "config": {
