--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,11 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-update-cmd":
+        [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "@php artisan ide-helper:generate"
         ]
     },
     "extra": {
